# pro2

./: .gitattributes  .gitignore  README.md  ott_churn_feature_engineering_plan.md  pyproject.toml
.github/workflows/: pages.yml
data/KKBOX/: kkbox_netflix_format.csv
models/: final_churn_model_metadata.json  final_churn_stacking_pipeline.joblib
notebooks/: 01_eda_segment_insight.ipynb  02_clustering_binned.ipynb  03_clustering_scaled.ipynb  04_churn_modeling_baseline.ipynb  05_churn_modeling_tuning_ensemble.ipynb  06_churn_model_interpretation_action.ipynb  07-1_churn_feature_engineering_first_try.ipynb  07-2_churn_behavior_feature_engineering_pipeline.ipynb  07-3_churn_auc_f1_optimization.ipynb  07-4_churn_f1_optimization_light.ipynb  07-5_churn_paper_based_feature_engineering.ipynb  08_kkbox_transfer_indomain.ipynb
outputs/: churn_model_final_result.csv  churn_risk_scores_test.csv  churn_threshold_result.csv  experiment_comparison.csv  final_churn_model_eval.csv  final_churn_risk_scores_test.csv  final_churn_topk_metrics.csv  kkbox_indomain_result.csv  kkbox_transfer_result.csv
report/: background.html  business_insight.html  clustering.html  eda.html  feature_engineering.html  index.html  modeling.html  results.html  style.css
reports/: index.html  modeling_methodology.html  retention_analysis.html  top_risk_retention_strategy.html
scripts/: build_eda_report.py  build_interactive_report.py  build_modeling_methodology_report.py  build_top_risk_retention_report.py
