[project]
name = "skn-30-project2"
version = "0.1.0"
description = "Netflix user churn segmentation, modeling, and retention action analysis"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "imblearn>=0.0",
    "ipykernel>=7.2.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.9",
    "nbclient>=0.10.4",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.2.0",
]
